Arranco mi proyecto real con html y css

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Aqui vamos a hacer un blogpost</h1>
+        <h1>Estamos practicando github</h1>
         <p>Este es el parrafo de inicio</p>
     </body>
 </html>
