--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,9 @@
                     no lo eres.... por ahora
                 </p>
                 <p>Suscribete y dale like</p>
+                <div id="footer">
+                    Hecho con amor en el curso de platzi
+                </div>
             </div>
         </div>
     </body>
