--- a/blogpost.html
+++ b/blogpost.html
@@ -13,13 +13,12 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las
-                    cosas incre&iacute;bles que se pueden hacer con ramas
-                </p>
+                    cosas incre&iacute;bles que se pueden hacer con ramas</p>
+                <p><img src="imagenes/naruto.jpg" width="100%" /></p>
                 <p>Los blogs son la mejor forma de compartir informacion
                     y tus ideas. Mucho mas que ir a conferencias o salir en 
                     Youtube. Excepto si eres un rockstar. Pero estadísticamente
-                    no lo eres.... por ahora
-                </p>
+                    no lo eres.... por ahora</p>
                 <p>Suscribete y dale like</p>
                 <div id="footer">
                     Hecho con amor en el curso de platzi
