--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,8 @@
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las
                     cosas incre&iacute;bles que se pueden hacer con ramas</p>
-                <p><img src="imagenes/naruto.jpg" width="100%" /></p>
+                <p><a href="https://imgur.com/XOA05O6"><img src="https://i.imgur.com/XOA05O6.jpg"
+                    width="100%" title="descripcion de la imagen" /></a></p>
                 <p>Los blogs son la mejor forma de compartir informacion
                     y tus ideas. Mucho mas que ir a conferencias o salir en 
                     Youtube. Excepto si eres un rockstar. Pero estadísticamente
